assets/css/style.css
/* Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Madimi+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');

/* Wildcard selector to override default styles given to the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: "Madimi One", "Rubik", sans-serif;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

/* Site Header Styling */

header {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #e5e5e5;
    width: 100%;
    border-bottom: 15px solid #08193B;
    z-index: 100;
    background-image: url('../images/site-images/site-header-img.webp');
    background-size: cover;
    background-position: center center;

}

header h1 {
    margin: 5px;
    padding-top: 10px;
    font-size: 1000%;
}

#logo {
    text-decoration: none;
    color: #4C9D44;
}

#logo span {
    color: #8259B0;
}

nav {
    display: flex;
    justify-content: center;
    font-size: 180%;
    margin-top: 10px;
    margin-bottom: 10px;
    background-color: #08193B;
    border: 5px solid #4c9d44;
    border-radius: 5px;
    padding: 10px;
    box-shadow: 0 2px 2px #4c9d44;
}

nav ul {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
}

nav li {
    margin: 10px;
}

nav a {
    text-decoration: none;
    padding: 10px;
    border: 1px solid #08193B;
    border-radius: 5px;
    transition: background-color 0.3s ease;

}

nav i {
    text-decoration: none;
    color: #4C9D44;
}

nav span {
    color: #9457D9;
}

nav a:hover {
    background-color: whitesmoke;
    border-radius: 10px;
    border: 3px solid #8259B0;
    color: #4C9D44;
}

.active {
    background-color: whitesmoke;
    border-radius: 10px;
    border: 3px solid #8259b0;
    color: #4C9D44;
}

/* Main Content Styling */

/* Pushes Footer down page */
main {
    flex: 1 0 auto;
    background-color: whitesmoke;
    background-image: url('../images/site-images/night-sky-art.webp');
    background-size: cover;
    background-position: center;
}

.game-section {
    display: flex;
    padding-top: 50px;
    padding-bottom: 50px;
    background-color: #08193B;
    background-image: url('../images/site-images/site-background.webp');
    background-position: center center;
}

#gameCanvas {
    width: 100%;
    height: 100%;
}

/* Game Start Button styling */
.start-btn {
    display: flex;
    position: absolute;
    width: 300px;
    height: 150px;
    background-image: url('../images/game-assets/play-btn.webp');
    background-size: cover;
    cursor: pointer;
    transition: background-image 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out;
}

.start-btn:hover {
    width: 320px;
    height: 170px;
    background-image: url('../images/game-assets/play-btn-hover.webp');
}

/* Game Menu Button styling */
.gameMenu-btn {
    display: flex;
    position: absolute;
    width: 300px;
    height: 150px;
    top: 650px;
    background-image: url('../images/game-assets/menu-btn.webp');
    background-size: cover;
    cursor: pointer;
    transition: background-image 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out;
}

.gameMenu-btn:hover {
    width: 320px;
    height: 170px;
    background-image: url('../images/game-assets/menu-btn-hover.webp');
}

/* Game Start Button styling */
.gameHtp-btn {
    display: flex;
    position: absolute;
    width: 300px;
    height: 150px;
    top: 600px;
    background-image: url('../images/game-assets/howtoplay-btn.webp');
    background-size: cover;
    cursor: pointer;
    transition: background-image 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out;
}

.gameHtp-btn:hover {
    width: 320px;
    height: 170px;
    background-image: url('../images/game-assets/howtoplay-btn-hover.webp');
}

.gameRestart-btn {
    display: flex;
    position: absolute;
    width: 300px;
    height: 150px;
    top: 520px;
    background-image: url('../images/game-assets/restart-btn.webp');
    background-size: cover;
    cursor: pointer;
    transition: background-image 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out;
}

.gameRestart-btn:hover {
    width: 320px;
    height: 170px;
    background-image: url('../images/game-assets/restart-btn-hover.webp');
}

.gameGoBack-btn {
    display: flex;
    position: absolute;
    width: 300px;
    height: 150px;
    top: 800px;
    background-image: url('../images/game-assets/goback-btn.webp');
    background-size: cover;
    cursor: pointer;
    transition: background-image 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out;
}

.gameGoBack-btn:hover {
    width: 320px;
    height: 170px;
    background-image: url('../images/game-assets/goback-btn-hover.webp');
}

.howtoplay-list {
    display: flex;
    position: absolute;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    background-color: whitesmoke;
    width: 700px;
    height: 400px;
    top: 330px;
    border: 3px solid black;
    background-image: url('../images/game-assets/howtoplay-div-img.webp');
    background-size: cover;

}

.howtoplay-list h2 {
    font-size: 250%;
}

.howtoplay-list p,
ol {
    font-size: 150%;
    line-height: 2;
}

.howtoplay-list span {
    color: #9457D9;
}

.gameScore {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: absolute;
    font-size: 35px;
    font-family: "Madimi One", "Rubik", sans-serif;
    color: #7AD071;
    top: 16px;

}

.gameScore>span {
    color: #C6A6EA;
}

.gameOverScore {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: absolute;
    font-family: "Madimi One", "Rubik", sans-serif;
    color: #7AD071;
    top: 350px;
    font-size: 60px;
}

.audioToggle {
    position: absolute;
    top: 90%;
    left: 95%;
}
/* ... */

